# GFSO

./: .gitignore  README.md  pyproject.toml  run_agent.py  smoke_test.py
docs/: agent_architecture.md  context.md  mathematics.md
examples/: simple_demo.py
gfso/: __init__.py
gfso/contract/: __init__.py  validator.py
gfso/core/: __init__.py  graph.py  kleisli.py  metric.py
gfso/engine/: __init__.py  executor.py
gfso_agent/: config.py  core.py  llm.py  logger.py  mechanisms.py  types.py
