[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfso"
version = "0.1.0"
description = "General Framework of Structural Optimization: Probabilistic contracts and topological control for stochastic systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GFSO Team"}
]
keywords = ["category-theory", "stochastic-systems", "validation", "contracts", "probabilistic-programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
full = [
    "POT>=0.9.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gfso"
Documentation = "https://github.com/yourusername/gfso/tree/main/docs"
Repository = "https://github.com/yourusername/gfso"

[tool.setuptools.packages.find]
where = ["."]
include = ["gfso*"]
exclude = ["tests*", "docs*"]
